AdminToolbox.Networking/2.3.3.1/ChangeLog.md
# **AdminToolbox.Networking**

![AdminToolbox.Networking](https://github.com/TheTaylorLee/AdminToolbox/blob/master/Images/AdminToolbox.Networking.png)

* **1.0.0.0** Created the Module
* **1.0.0.1** Exported Functions
* **1.0.1.0** Reduced the module load time using .net methods
* **1.1.0.0** Added references to managing routes
* **1.2.0.0** Added Functions Start-Speedtest and Get-Whois
* **1.2.0.1** Exported functions
* **1.2.0.2** Fix for Invoke-Unzip
* **1.3.0.0** Added Get-MacVendor function and added changelog markdown
* **2.3.0.0** Added Invoke-NetworkScan. Fantastic powershell device discovery tool.
* **2.3.1.0** Modified Invoke-NetworkScan to add comment help and additonal output objects that were previously left out of the PSCustomObject
* **2.3.2.0** Added regex validation for cidr on function parameters for invoke-networkscan
* **2.3.2.1** Added requiremed module PSNmap to the manifest
* **2.3.3.0** Filtering null results for invoke-networkscan
* **2.3.3.0** updated help for invoke-networkscan